--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
   <div class="left-panel">
-    <!-- Espaço para imagem ou frase motivacional futuramente -->
+    <img src="/cargoexpresslogo2.png" alt="logo cargoexpress" class="logo" />
   </div>
 
   <div class="right-panel">
