--- a/src/app/pages/admin/gerenciar-veiculos/gerenciar-veiculos.component.css
+++ b/src/app/pages/admin/gerenciar-veiculos/gerenciar-veiculos.component.css
@@ -1,6 +1,11 @@
-.form-veiculo {
-  display: grid;
-  gap: 16px;
-  max-width: 400px;
-  margin: 24px auto;
+.example-spacer {
+  flex: 1 1 auto;
 }
+
+.toolbar{
+  background-color: red;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2)
+}
+
+
+
