--- a/src/app/dialog/dialog.component.css
+++ b/src/app/dialog/dialog.component.css
@@ -1,11 +1,16 @@
+.form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+}
+
 mat-form-field{
     width: 100%;
 }
 
-h1{
-    align-self: center;
-    margin-top: 10px;
-}
+
 
 .btn-salvar{
     margin-left: 8px;
