--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,3 +1,4 @@
+<div class="form-container">
 <h1 mat-dialog-title>Adicionar Veículos</h1>
 <div mat-dialog-content>
     <mat-form-field appearance="fill">
@@ -39,7 +40,9 @@
   </mat-form-field>
 </div>
 
-<div mat-dialog-action [align]="'end'">
+<div>
   <button mat-raised-button color="warn" mat-dialog-close>Fechar</button>
   <button mat-raised-button color="primary" class="btn-salvar">Salvar</button>
+</div>
+
 </div>
