adicionado formgroup ao dialog.html e ao dialog.ts e também a chamada da função no botão salvar btn_Salvar()

--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,48 +1,48 @@
 <div class="form-container">
 <h1 mat-dialog-title>Adicionar Veículos</h1>
-<div mat-dialog-content>
-    <mat-form-field appearance="fill">
-        <mat-label>Placa</mat-label>
-        <input matInput placeholder="Ex:. AAA8H50">
-  </mat-form-field>
+  <form [formGroup]="cadastrar_veiculo_form"> 
+    <div mat-dialog-content>
+        <mat-form-field appearance="fill">
+            <mat-label>Placa</mat-label>
+            <input matInput placeholder="Ex:. AAA8H50">
+      </mat-form-field>
 
-   <mat-form-field appearance="fill">
-        <mat-label>Modelo</mat-label>
-        <input matInput placeholder="Modelo">
-  </mat-form-field>
+      <mat-form-field appearance="fill">
+            <mat-label>Modelo</mat-label>
+            <input matInput placeholder="Modelo">
+      </mat-form-field>
 
-   <mat-form-field appearance="fill">
-    <mat-label>Tipo</mat-label>
-    <mat-select placeholder="">
-      <mat-option value="">Carro</mat-option>
-      <mat-option value="">Van</mat-option>
-      <mat-option value="">Caminhão</mat-option>
-    </mat-select>
-  </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Tipo</mat-label>
+        <mat-select placeholder="">
+          <mat-option value="">Carro</mat-option>
+          <mat-option value="">Van</mat-option>
+          <mat-option value="">Caminhão</mat-option>
+        </mat-select>
+      </mat-form-field>
 
-  <mat-form-field appearance="fill">
-        <mat-label>Ano</mat-label>
-        <input matInput placeholder="Ex.: 2014">
-  </mat-form-field>
+      <mat-form-field appearance="fill">
+            <mat-label>Ano</mat-label>
+            <input matInput placeholder="Ex.: 2014">
+      </mat-form-field>
 
-  <mat-form-field appearance="fill">
-        <mat-label>Quilometragem Atual</mat-label>
-        <input matInput placeholder="Ex.: 20.521">
-  </mat-form-field>
+      <mat-form-field appearance="fill">
+            <mat-label>Quilometragem Atual</mat-label>
+            <input matInput placeholder="Ex.: 20.521">
+      </mat-form-field>
 
-    <mat-form-field appearance="fill">
-    <mat-label>Status</mat-label>
-    <mat-select placeholder="">
-      <mat-option value="">Disponível</mat-option>
-      <mat-option value="">Inativo</mat-option>
-      <mat-option value="">Em anutenção</mat-option>
-    </mat-select>
-  </mat-form-field>
-</div>
-
-<div>
-  <button mat-raised-button color="warn" mat-dialog-close>Fechar</button>
-  <button mat-raised-button color="primary" class="btn-salvar">Salvar</button>
-</div>
-
+        <mat-form-field appearance="fill">
+        <mat-label>Status</mat-label>
+        <mat-select placeholder="">
+          <mat-option value="">Disponível</mat-option>
+          <mat-option value="">Inativo</mat-option>
+          <mat-option value="">Em anutenção</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div>
+      <button mat-raised-button color="warn" mat-dialog-close>Fechar</button>
+      <button mat-raised-button color="primary" (click)="btn_Salvar()" class="btn-salvar">Salvar</button>
+    </div>
+  </form>
 </div>
