--- a/src/app/pages/admin/gerenciar-motoristas/gerenciar-motoristas.component.html
+++ b/src/app/pages/admin/gerenciar-motoristas/gerenciar-motoristas.component.html
@@ -1,1 +1,5 @@
-<p>gerenciar-motoristas works!</p>
+<mat-toolbar class="toolbar">
+  <span class="titulo">Gerenciar Motoristas</span>
+  <span class="example-spacer"></span>
+  <button mat-raised-button color="primary" (click)="openDialog()">Editar</button>
+</mat-toolbar>
