--- a/src/app/pages/admin/registrar-abastecimento/registrar-abastecimento.component.html
+++ b/src/app/pages/admin/registrar-abastecimento/registrar-abastecimento.component.html
@@ -1,1 +1,46 @@
-<p>registrar-abastecimento works!</p>
+<h2 mat-dialog-title>Registrar Abastecimento</h2>
+<form [formGroup]="form_abastecimento" (ngSubmit)="onSubmit()">
+
+    <mat-form-field appearance="fill">
+        <mat-label>Veículo</mat-label>
+        <mat-select formControlName="veiculo" required>
+            <mat-option *ngFor="let v of veiculo" [value]="v">{{ v }}</mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Data</mat-label>
+        <input matInput [matDatepicker]="picker" formControlName="dataAbastecimento" required>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Tipo de Combustível</mat-label>
+        <input matInput type="string" formControlName="tipo" required>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Valor</mat-label>
+        <input matInput type="number" formControlName="valorTotal" required>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Quilometragem</mat-label>
+        <input matInput type="number" formControlName="quilometragem" required>
+    </mat-form-field>
+
+
+    <mat-form-field appearance="fill">
+        <mat-label>Nome Motorista</mat-label>
+            <mat-select formControlName="motorista" required>
+                <mat-option *ngFor="let m of motorista" [value]="m">{{ m }}</mat-option>   
+            </mat-select>
+    </mat-form-field>
+
+     <div mat-dialog-actions>
+        <button mat-raised-button color="warn" mat-dialog-close>Cancelar</button>
+        <button mat-raised-button color="primary" type="submit">Registar</button>
+    </div>
+
+</form>
