--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -13,7 +13,7 @@
     <!-- <button mat-button routerLink="/admin/agendar-viagem">Agendar Viagem</button> -->
     <button mat-button routerLink="/admin/gerenciar-veiculos">Gerenciar Veículos</button>
     <button mat-button routerLink="/admin/gerenciar-motoristas">Gerenciar Motoristas</button>
-    <button mat-button routerLink="/admin/registrar-abastecimento">Registrar Abastecimento</button>
+    <!-- <button mat-button routerLink="/admin/registrar-abastecimento">Registrar Abastecimento</button> -->
     <button mat-button routerLink="/admin/registrar-manutencao">Registrar Manutenção</button>
   </mat-sidenav>
 
