--- a/src/app/pages/admin/gerenciar-veiculos/components/editar-veiculo/editar-veiculo.component.html
+++ b/src/app/pages/admin/gerenciar-veiculos/components/editar-veiculo/editar-veiculo.component.html
@@ -1,6 +1,12 @@
 <h2>Edição de Veículo</h2>
 
 <form [formGroup]="veiculoForm" (ngSubmit)="onSubmit()">
+
+  <mat-form-field appearance="outline" class="full-width">
+    <mat-label>Placa</mat-label>
+    <input matInput formControlName="placa" />
+  </mat-form-field>
+
   <mat-form-field appearance="outline" class="full-width">
     <mat-label>Modelo</mat-label>
     <input matInput formControlName="modelo" />
@@ -12,18 +18,13 @@
   </mat-form-field>
 
   <mat-form-field appearance="outline" class="full-width">
-    <mat-label>Placa</mat-label>
-    <input matInput formControlName="placa" />
-  </mat-form-field>
-
-  <mat-form-field appearance="outline" class="full-width">
     <mat-label>Ano</mat-label>
     <input matInput type="number" formControlName="ano" />
   </mat-form-field>
 
   <mat-form-field appearance="outline" class="full-width">
-    <mat-label>KM</mat-label>
-    <input matInput type="number" formControlName="km" />
+    <mat-label>Quilometragem Atual</mat-label>
+    <input matInput type="number" formControlName="quilometragemAtual" />
   </mat-form-field>
 
   <mat-form-field appearance="outline" class="full-width">
