Todas as telas finalizadas

--- a/src/app/pages/admin/agendar-viagem/agendar-viagem.component.html
+++ b/src/app/pages/admin/agendar-viagem/agendar-viagem.component.html
@@ -36,8 +36,8 @@
     <textarea matInput formControlName="justificativa" required></textarea>
   </mat-form-field>
 
-  <div mat-dialog-actions>
-    <button mat-raised-button color="warn" mat-dialog-close>Cancelar</button>
+  <div class="actions">
     <button mat-raised-button color="primary" type="submit">Agendar</button>
+    <button mat-raised-button color="warn" mat-dialog-close>Cancelar</button>
   </div>
 </form>
