--- a/src/app/pages/admin/gerenciar-veiculos/gerenciar-veiculos.component.html
+++ b/src/app/pages/admin/gerenciar-veiculos/gerenciar-veiculos.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="toolbar">
   <span class="titulo">Gerenciar Veículos</span>
   <span class="example-spacer"></span>
-  <button mat-raised-button color="primary" (click)="openDialog()">Editar</button>
+  <button mat-raised-button color="primary" (click)="openDialog()">Cadastrar</button>
 </mat-toolbar>
 
 <div class="tabela-container">
