--- a/src/app/pages/admin/gerenciar-motoristas/editar-motorista/form-motoristas.component.css
+++ b/src/app/pages/admin/gerenciar-motoristas/editar-motorista/form-motoristas.component.css
@@ -10,7 +10,8 @@ mat-form-field{
     width: 100%;
 }
 
-.btn-salvar{
-    margin-left: 8px;
-    margin-right: 8px;
+.actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
 }
