--- a/src/app/pages/admin/gerenciar-veiculos/components/cadastrar-veiculo/cadastrar-veiculo.component.css
+++ b/src/app/pages/admin/gerenciar-veiculos/components/cadastrar-veiculo/cadastrar-veiculo.component.css
@@ -1,6 +1,14 @@
-.full-width {
-  width: 100%;
-  margin-bottom: 16px;
+.form-container{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+}
+
+mat-form-field{
+    width: 100%;
 }
 
 .actions {
@@ -8,3 +16,4 @@
   justify-content: flex-end;
   gap: 8px;
 }
+
