--- a/src/app/pages/admin/gerenciar-veiculos/components/editar-veiculo/editar-veiculo.component.css
+++ b/src/app/pages/admin/gerenciar-veiculos/components/editar-veiculo/editar-veiculo.component.css
@@ -1,6 +1,13 @@
-.full-width {
-  width: 100%;
-  margin-bottom: 16px;
+.form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+}
+
+mat-form-field{
+    width: 100%;
 }
 
 .actions {
