--- a/src/app/pages/admin/gerenciar-motoristas/gerenciar-motoristas.component.html
+++ b/src/app/pages/admin/gerenciar-motoristas/gerenciar-motoristas.component.html
@@ -38,7 +38,7 @@
     </ng-container>
 
     <ng-container matColumnDef="Email">
-      <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> E-mail </mat-header-cell>
       <mat-cell *matCellDef="let motorista"> {{motorista.email}} </mat-cell>
     </ng-container>
 
