--- a/src/app/pages/admin/gerenciar-motoristas/cadastrar-motorista/form-motoristas.component.html
+++ b/src/app/pages/admin/gerenciar-motoristas/cadastrar-motorista/form-motoristas.component.html
@@ -27,14 +27,39 @@
 
        <mat-form-field appearance="fill">
         <mat-label>Telefone</mat-label>
-        <input matInput formControlName="telefone">
+        <input matInput type="text" mask="(00) 00000-0000" formControlName="telefone" placeholder="(XX) XXXXX-XXXX">
       </mat-form-field>
 
       <mat-form-field appearance="fill">
-        <mat-label>Endereço</mat-label>
-        <input matInput formControlName="endereco">
+        <mat-label>CEP</mat-label>
+        <input matInput formControlName="cep" maxlength="8" (blur)="buscarCep()" placeholder="Digite o CEP" />
+        <button mat-icon-button matSuffix (click)="buscarCep()" aria-label="Buscar CEP">
+          <mat-icon>search</mat-icon>
+        </button>
+        <mat-error *ngIf="formMotorista.get('cep')?.hasError('required')" > CEP Obrigatório!</mat-error>
+        <mat-error *ngIf="formMotorista.get('cep')?.hasError('pattern')" > CEP Inválido - Somente Números!</mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Logradouro</mat-label>
+        <input matInput formControlName="logradouro">
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Bairro</mat-label>
+        <input matInput formControlName="bairro">
+      </mat-form-field>
+
+       <mat-form-field appearance="fill">
+        <mat-label>Localidade</mat-label>
+        <input matInput formControlName="localidade">
       </mat-form-field>
       
+       <mat-form-field appearance="fill">
+        <mat-label>UF</mat-label>
+        <input matInput formControlName="uf">
+      </mat-form-field>
+
       <mat-form-field appearance="fill">
         <mat-label>E-mail</mat-label>
         <input matInput formControlName="email">
