--- a/src/app/pages/admin/gerenciar-motoristas/cadastrar-motorista/form-motoristas.component.css
+++ b/src/app/pages/admin/gerenciar-motoristas/cadastrar-motorista/form-motoristas.component.css
@@ -7,6 +7,8 @@
 .form-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 16px;
   max-height: 80vh;
   overflow-y: auto;
