--- a/src/app/pages/admin/gerenciar-motoristas/editar-motorista/editar-motorista.component.html
+++ b/src/app/pages/admin/gerenciar-motoristas/editar-motorista/editar-motorista.component.html
@@ -17,10 +17,10 @@
         <input matInput formControlName="cnh" />
         </mat-form-field>
 
-        <mat-form-field appearance="fill" class="full-width">
+        <mat-form-field appearance="fill">
         <mat-label>Validade CNH</mat-label>
-        <input matInput type="number" formControlName="validade_cnh" />
-        </mat-form-field>
+        <input matInput type="date" formControlName="validade_cnh" />
+      </mat-form-field>
 
         <mat-form-field appearance="fill" class="full-width">
         <mat-label>Telefone</mat-label>
@@ -28,18 +28,43 @@
         </mat-form-field>
 
         <mat-form-field appearance="fill">
-        <mat-label>Endereço</mat-label>
-        <input matInput formControlName="endereco">
-        </mat-form-field>
+        <mat-label>CEP</mat-label>
+        <input matInput formControlName="cep" maxlength="8" (blur)="buscarCep()"/>
+        <button mat-icon-button matSuffix type="button" (click)="buscarCep()" aria-label="Buscar CEP">
+          <mat-icon>search</mat-icon>
+        </button>
+        <mat-error *ngIf="motoristaForm.get('cep')?.hasError('required')" > CEP Obrigatório!</mat-error>
+        <mat-error *ngIf="motoristaForm.get('cep')?.hasError('pattern')" > CEP Inválido - Somente Números!</mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Logradouro</mat-label>
+        <input matInput formControlName="logradouro">
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Bairro</mat-label>
+        <input matInput formControlName="bairro">
+      </mat-form-field>
+
+       <mat-form-field appearance="fill">
+        <mat-label>Localidade</mat-label>
+        <input matInput formControlName="localidade">
+      </mat-form-field>
+      
+       <mat-form-field appearance="fill">
+        <mat-label>UF</mat-label>
+        <input matInput formControlName="uf">
+      </mat-form-field>
 
         <mat-form-field appearance="fill" class="full-width">
         <mat-label>E-mail</mat-label>
-        <input matInput type="number" formControlName="email" />
+        <input matInput type="email" formControlName="email" />
         </mat-form-field>
 
         <mat-form-field appearance="fill" class="full-width">
         <mat-label>Senha</mat-label>
-        <input matInput type="number" formControlName="senha" />
+        <input matInput type="password" formControlName="senha" />
         </mat-form-field>
     </div>
     
