--- a/src/app/pages/admin/gerenciar-motoristas/cadastrar-motorista/form-motoristas.component.css
+++ b/src/app/pages/admin/gerenciar-motoristas/cadastrar-motorista/form-motoristas.component.css
@@ -1,24 +1,26 @@
-:host {
-  display: block;
-  max-height: 90vh; /* limite de altura da janela */
-  overflow: auto;
-}
-
 .form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 16px;
-  max-height: 80vh;
-  overflow-y: auto;
+  padding: 10px;
   width: 100%;
   box-sizing: border-box;
 }
 
+.form-row-flex {
+  display: flex;
+  gap: 16px;
+  width: 100%;
+}
+
+.inputCep{
+  width: 220px;
+}
+
 mat-form-field {
   width: 100%;
-  margin-bottom: 12px;
+ 
 }
 
 .actions {
