--- a/src/app/pages/admin/gerenciar-motoristas/cadastrar-motorista/form-motoristas.component.html
+++ b/src/app/pages/admin/gerenciar-motoristas/cadastrar-motorista/form-motoristas.component.html
@@ -1,18 +1,26 @@
 <div class="form-container">
-  <h1 mat-dialog-title>Cadastrar Motoristas</h1>
+  <h1 mat-dialog-title>Cadastro de Motoristas</h1>
   <form [formGroup]="formMotorista" (ngSubmit)="onSubmit()">
-    <div mat-dialog-content>
 
+    <div mat-dialog-content>
       <mat-form-field appearance="fill">
         <mat-label>Nome Completo</mat-label>
         <input matInput formControlName="nome">
       </mat-form-field>
       
-      <mat-form-field appearance="fill">
+      <div class="form-row-flex">
+         <mat-form-field appearance="fill">
         <mat-label>CPF</mat-label>
         <input matInput formControlName="cpf">
       </mat-form-field>
 
+      <mat-form-field appearance="fill">
+        <mat-label>Telefone</mat-label>
+        <input matInput type="text" mask="(00) 00000-0000" formControlName="telefone" placeholder="(XX) XXXXX-XXXX">
+      </mat-form-field>
+      </div>
+
+    <div class="form-row-flex">
       <mat-form-field appearance="fill">
         <mat-label>CNH</mat-label>
         <input matInput formControlName="cnh">
@@ -24,13 +32,11 @@
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
+    </div>
 
-       <mat-form-field appearance="fill">
-        <mat-label>Telefone</mat-label>
-        <input matInput type="text" mask="(00) 00000-0000" formControlName="telefone" placeholder="(XX) XXXXX-XXXX">
-      </mat-form-field>
 
-      <mat-form-field appearance="fill">
+    <div class="form-row-flex">
+       <mat-form-field appearance="fill" class="inputCep">
         <mat-label>CEP</mat-label>
         <input matInput formControlName="cep" maxlength="8" (blur)="buscarCep()"/>
         <button mat-icon-button matSuffix type="button" (click)="buscarCep()" aria-label="Buscar CEP">
@@ -44,23 +50,28 @@
         <mat-label>Logradouro</mat-label>
         <input matInput formControlName="logradouro">
       </mat-form-field>
-
-      <mat-form-field appearance="fill">
+    </div>
+   
+   <div class="form-row-flex">
+     <mat-form-field appearance="fill" >
         <mat-label>Bairro</mat-label>
         <input matInput formControlName="bairro">
       </mat-form-field>
 
-       <mat-form-field appearance="fill">
+       <mat-form-field appearance="fill" >
         <mat-label>Localidade</mat-label>
         <input matInput formControlName="localidade">
       </mat-form-field>
       
-       <mat-form-field appearance="fill">
+       <mat-form-field appearance="fill" class="uf">
         <mat-label>UF</mat-label>
         <input matInput formControlName="uf">
       </mat-form-field>
+   </div>
+     
+    <div class="form-row-flex">
 
-      <mat-form-field appearance="fill">
+         <mat-form-field appearance="fill">
         <mat-label>E-mail</mat-label>
         <input matInput formControlName="email">
       </mat-form-field>
@@ -70,10 +81,16 @@
         <input matInput formControlName="senha">
       </mat-form-field>
     </div>
+    </div>
+
+ 
+    
+
+   
     
     <div class="actions">
       <button mat-raised-button color="primary" class="btn-salvar" type="submit">Salvar</button>
-      <button mat-raised-button color="warn" (click)="onClose()">Fechar</button>
+      <button mat-raised-button color="warn" (click)="onClose()">Cancelar</button>
     </div>
   </form>
 </div>
